# OperationsCenter

./: .baseline-validation.json  .coveragerc  .env.operations-center.example  .gitattributes  .gitignore  AUDIT_CODE_QUALITY_FINDINGS.md  AUDIT_STAGE_0_FINDINGS.md  AUDIT_TOOL_OUTPUT.md  BOUNDARY_B1_B2_INVESTIGATION.md  BOUNDARY_B2_SECRET_REFRESH_EVIDENCE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DERIVER_AUDIT_STAGE0.md  DERIVER_AUDIT_STAGE1.md  DERIVER_AUDIT_STAGE2.md  DERIVER_AUDIT_STAGE2_REVISED.md  DERIVER_AUDIT_STAGE4.md  IMPLEMENTATION_VERIFICATION_SUMMARY.md  INVESTIGATION_REPORT_REVIEW_CONCERNS.md  LOOP_START.md  PHASE_2_METRICS_ROADMAP.md  README.md  RESOLUTION_SUMMARY.md  REVIEW_VERIFICATION_REPORT.md  SECURITY.md  STAGE1_ARTIFACT_INVENTORY.md  STAGE1_DOCUMENTATION_VERIFICATION.md  STAGE1_FINAL_SUMMARY.md  STAGE1_vs_STAGE2_CLARITY.md  STAGE2_IMPLEMENTATION_SUMMARY.md  STAGE2_IMPLEMENTATION_VERIFICATION.md  STAGE2_VERIFICATION_REPORT.md  STAGE3_ACCEPTANCE_VERIFICATION.md  STAGE3_FINAL_VERIFICATION.md  STAGE3_PRECISION_DISCREPANCY_ANALYSIS.md  STAGE3_TEST_COVERAGE_VERIFICATION.md  STAGE3_TEST_SCENARIOS_DETAILED.md  STAGE4_FULL_TEST_SUITE_VALIDATION.md  STAGE_0_ANALYSIS.md  (+27 more)
.claude/: settings.json
.claude/hooks/: pre_tool_use.sh  stop.sh
.console/: STAGE0_ESCALATION_ANALYSIS.md  STAGE0_PYTHON311_COMPATIBILITY_ANALYSIS.md  STAGE2_PYTHON_VERSION_CONSTRAINT_ANALYSIS.md  STAGE4_COMPLETION.md  STAGE4_FINAL_VERIFICATION.md  STAGE5_CI_CONFIGURATION_VALIDATION.md  backlog.md  coverage-config.yaml  haiku_collector_prompt.md  log.md  loop_schedule.json  task.md  watchdog_loop_prompt.md  workers.yaml
.console/validation/: PHASE0_FINAL_VALIDATION.md
.context/: README.md  config.yaml  loop_schedule.json
.context/templates/: investigation_capsule.template.yaml  watchdog_checkpoint.template.yaml  worker_handoff.template.yaml
.custodian/: architecture.py  config.yaml  detectors.py  log_scanner.py  state_scanner.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  custodian-audit.yml  eval-corpus-integrity.yml
.hooks/: pre-commit
.specs/: board-unblock-rule-tests.md
.team_executor/: checkpoint-1c272514-7deb-487e-aeea-41d721d12e7e.json  checkpoint-5175aedd-8e2d-47e8-ae6f-6488f62d62cd.json  checkpoint-524d64e9-3b68-43a2-9bee-7465a0055b82.json  checkpoint-909e4e98-ce24-4bdb-ace1-0daa4a45a502.json  checkpoint-9bf5d4c8-c070-470c-a838-8b3f7efcb71a.json  checkpoint-a0d8e5c5-cbb9-4774-9e29-9ec352951027.json
config/: operations_center.example.yaml  runtime_binding_policy.yaml
deploy/systemd/: oc-egress-proxy.service
docs/: README.md  TESTING.md  TESTING_DEVELOPER_GUIDE.md  TESTING_TROUBLESHOOTING.md  backlog.md  coverage-threshold-configuration.md  demo.md
docs/architecture/: maintenance_pattern.md  pr_review_watcher.md  verdict_consolidation.md
docs/backends/: aider_local.md
docs/custodian/: console-reconciliation-detectors.md  console-reconciliation-test-strategy.md
docs/design/: CAMPAIGN_SPECIFICATION_STAGES_0-9.md  CODE_FAILURE_RETRY_CAP.md  CONTEXT_DISCIPLINE.md  COUNCIL_VERDICT.md  COVERAGE_THRESHOLD_ALERTING_USER_GUIDE.md  EXECUTION_LINEAGE_AND_DETERMINISM_BOUNDARY.md  FLAKY_TEST_ALERT_CONFIGURATION_GUIDE.md  FLAKY_TEST_DASHBOARD_USER_GUIDE.md  HARNESS_TRUST_HARDENING.md  INCOMPLETE_INTEGRATION_REMEDIATION.md  INERT_MACHINERY_INVENTORY.md  LINEAGE_STEERING_CONSUMER.md  LINEAGE_VISUALIZATION.md  RISK_TIERED_APPROVAL.md  RUNTIME_CAPABILITY_ENFORCEMENT.md  SELF_HEAL_LADDER.md  STAGE0_CLI_SPECIFICATION.md  STAGE0_COVERAGE_ALERTING_ARCHITECTURE_ANALYSIS.md  STAGE0_COVERAGE_THRESHOLD_ALERTING_SYSTEM.md  STAGE0_FLAKY_TEST_REPORTER_ARCHITECTURE.md  STAGE0_TEST_FAILURE_EXTRACTION.md  STAGE1_CI_INTEGRATION_TEST_RUNNER_DESIGN.md  STAGE2_CI_INTEGRATION_TEST_RUNNER_IMPLEMENTATION.md  STAGE2_TOKEN_STRIPPING_IMPLEMENTATION.md  STAGE3_REAL_WORLD_SNAPSHOT_VALIDATION_TESTS.md  STAGE4_LOCAL_TESTING_AND_VERIFICATION.md  STAGE5_COMPREHENSIVE_TEST_IMPLEMENTATION.md  STAGE5_DOCUMENTATION_AND_FINAL_REVIEW.md  dependency-report-performance-tests.md  execution_budget_and_safety_controls.md  flaky-test-reporter-ci-integration.md  flaky-test-reporter.md  lifecycle.md  observer-race-condition-guard.md  roadmap.md  snapshot-validation-ci-integration.md  snapshot-validation-ci-runner.md
docs/guides/: COVERAGE_ALERTING_CONFIGURATION.md  COVERAGE_ALERTING_INTEGRATION.md  COVERAGE_ALERTING_TROUBLESHOOTING.md  COVERAGE_ALERTING_USAGE.md
docs/operator/: archon_workflow_registration.md  backend_error_catalog.md  diagnostics.md  error_handling_quick_reference.md  error_handling_recipes.md  error_handling_recovery.md  error_message_diagnostics.md  error_scenarios.md  executor_failure_contracts.md  merge_decision_instrumentation.md  pr_review.md  runtime.md  (+9 more)
eval/: README.md  SIGNING.md  seed_candidates.py
registry/: source_registry.yaml
scripts/: backup-secrets.sh  kodo-shim  oc-status.py  operations-center.sh  reset-training-branches.sh  setup-secrets.sh
specs/: p5-routing-metadata-wirethrough.md
tests/: conftest.py  test_aider_local_adapter.py  test_arch_scheduler.py  test_architecture_cleanup_guards.py  test_architecture_signal.py  test_audit_close_receipts.py  test_backlog_promoter.py  test_backlog_promotion.py  test_bundles_2_3.py  test_chain_policy.py  test_check_signal_collector.py  test_close_stale_prs.py  test_collector_distinct_files.py  test_cross_signal.py  test_custodian_sweep.py  test_decision.py  test_decision_entrypoint.py  test_demo_cli.py  test_demo_routing.py  test_demo_stub_adapter.py  test_dependency_check.py  test_dependency_drift_collector.py  test_dependency_drift_deriver.py  test_deriver_regression.py  test_deriver_transition_coverage.py  test_escalation.py  test_execution_controls.py  test_execution_health.py  test_git_client.py  test_import_fixtures.py  test_insights.py  test_insights_entrypoint.py  test_lint_drift_deriver.py  test_loop_controller.py  test_max_changed_files.py  test_observation_coverage_integration.py  test_observer.py  test_observer_entrypoint.py  test_per_section_walk.py  test_phase5_collectors.py  (+36 more)
(+958 files in other folders)
